# ai-traps

./: .gitignore  LICENSE  README.md  task_progress.md  typescript
.claude/skills/graphify/: SKILL.md
3d-models/cubiea7s/: 4k-mount.stl  camera-case-cubiea7s.scad
3d-models/rock3c/: RuggedBoxV1.scad  picam-plate.stl
apps/ai_trap_manager/: .metadata  README.md  pubspec.yaml
apps/ai_trap_manager/docs/api/: README.md  openapi.yaml
apps/ai_trap_manager/ios/Runner/: Info.plist
apps/ai_trap_manager/ios/Runner.xcodeproj/: project.pbxproj
apps/ai_trap_manager/lib/: main.dart
apps/ai_trap_manager/lib/models/: detection.dart  session.dart  sse_event.dart  system_metrics.dart  trap_status.dart
apps/ai_trap_manager/lib/providers/: ble_provider.dart  trap_provider.dart  websocket_provider.dart
apps/ai_trap_manager/lib/screens/: config_screen.dart  connect_trap_dialog.dart  monitoring_screen.dart  session_detections_screen.dart  sessions_master_detail.dart  sessions_screen.dart  trap_screen.dart
apps/ai_trap_manager/lib/services/: camera_trap_api.dart  h264_decoder.dart  sse_service.dart  ws_api_service.dart
apps/ai_trap_manager/lib/widgets/: adaptive_app_shell.dart  camera_stream_widget.dart  metrics_dashboard.dart
apps/ai_trap_manager/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/ai_trap_manager/macos/Runner.xcodeproj/: project.pbxproj
apps/ai_trap_manager/macos/Runner/Configs/: AppInfo.xcconfig
apps/ai_trap_manager/test/: widget_test.dart
docs/: For Radxa Rock 3C (RK3568) RGA + MPP.md  ble-gatt-service.md  build-server.md  native-build.md  platform-bring-up-guide.md  rock3c-deploy.md  📁 Project Structure for Schema-Driven Async API.md
graphify-out/: GRAPH_REPORT.md  graph.json
models/detection/insects/yolo26n/: .project  requirements.txt  train_yolo26n.py
models/detection/insects/yolo26n/convert/: Dockerfile.nbg  Dockerfile.rknn  README.md  convert_nbg.py  convert_nbg_docker.sh  convert_rknn.py
models/detection/insects/yolov8n/: train_yolov8n.py
models/detection/insects/yolov8n/convert/: Dockerfile.rknn  convert_rknn.py  convert_rknn_onboard.py  convert_rknn_onboard.sh
testing/: test-data.md
testing/python/: generate-insect-entrance-exit.py  generate-insect.py  generate-looping-insects.py  generate-multi-insect.py  test_inference_rknn.py
tools/docker/: README.md  cross-build.sh  cubie-a7s.Dockerfile  docker-compose.yml  rdk-x5.Dockerfile  rock3c.Dockerfile
tools/docker/cross/: aarch64-cubie-a7s.ini  aarch64-rdk-x5.ini  aarch64-rock3c.ini
tools/docker/rdk-x5-bpu/: Dockerfile
tools/docker/sdk-stubs/cubie-a7s/VX/: vx.h  (+2 more)
tools/mcp/: .gitignore  README.md
tools/mcp/scripts/: build_server.py  deploy.sh  deploy_build_server.sh  generate_actor_diagram.py  generate_project_graph.py  mcp-build-server.py  test_tarball.py  test_tarball_integration.py  trap-mcp-server.py
tools/mcp/scripts/mcp_build/: __init__.py  build.py  config.py  deploy.py  handler.py  model.py  parsers.py  remote.py  tools.py
tools/native/: build.sh  setup-sysroot.sh
tools/native/cross/: aarch64-rock3c.ini
tools/scripts/: add_license_headers.py  ble_advert.cpp  ble_scan_traps.py  ble_test_advertise.cpp  ble_test_advertise.py  extract-sdk.sh  setup-cubie-a7s.sh  setup-rock3c.sh  test_order.c  v4l2_test_capture.cpp
tools/scripts/lib/: setup-common.sh
tools/trapd/: trap-mgmt-server.py  trapd.py  trapd.service
traps/targets/: meson.build  meson_options.txt
traps/targets/config/: cubie-a7s.yaml  rock3c-test.yaml  rock3c.yaml
traps/targets/src/detection/actors/: types.hpp
traps/targets/src/detection/actors/http-handler/: http_handler_actor.cpp  http_handler_actor.hpp
traps/targets/src/detection/actors/session/: session_actor.cpp  session_actor.hpp
traps/targets/src/detection/actors/ws-api/: ws_api_handler.cpp  ws_api_handler.hpp
traps/targets/src/detection/pipeline/: base_detection_pipeline.cpp  base_detection_pipeline.hpp  meson.build
traps/toolkit/: meson.build  meson_options.txt  test_inference.cpp
traps/toolkit/src/actors/: meson.build  ramen.hpp
traps/toolkit/src/actors/actuator/: actuator_actor.cpp  actuator_actor.hpp
traps/toolkit/src/actors/base-http-handler/: base_http_handler.cpp  base_http_handler.h
traps/toolkit/src/actors/base-storage/: base_storage.hpp
traps/toolkit/src/actors/base-trap-handler/: README.md  base_trap_handler.hpp
traps/toolkit/src/actors/best-shot/: best_shot_keeper_actor.hpp
traps/toolkit/src/actors/camera/: camera_actor.hpp  camera_factory.cpp  camera_hal_actor.cpp  camera_hal_actor.hpp  scene_camera_actor.cpp  scene_camera_actor.hpp
traps/toolkit/src/actors/classifier/: classifier_actor.hpp
traps/toolkit/src/actors/crop-encoder/: crop_encoder_actor.hpp
traps/toolkit/src/actors/cropper/: cropper_actor.cpp  cropper_actor.hpp
traps/toolkit/src/actors/data-store/: data_store.cpp  data_store.hpp
traps/toolkit/src/actors/decision/: decision_actor.cpp  decision_actor.hpp
traps/toolkit/src/actors/event-publisher/: event_publisher_actor.cpp  event_publisher_actor.hpp
traps/toolkit/src/actors/http-sse/: civetweb.c  http_sse_actor.cpp  http_sse_actor.h
traps/toolkit/src/actors/inference/: inference_actor.cpp  inference_actor.hpp
traps/toolkit/src/actors/jpeg-encoder/: hardware_jpeg_encoder.cpp  hardware_jpeg_encoder.hpp  software_jpeg_encoder.cpp  software_jpeg_encoder.hpp
traps/toolkit/src/actors/mjpeg-bridge/: hires_mjpeg_bridge.hpp  mjpeg_bridge_actor.cpp  mjpeg_bridge_actor.hpp
traps/toolkit/src/actors/motion-sensor/: motion_sensor_actor.cpp  motion_sensor_actor.hpp
traps/toolkit/src/actors/overlay/: overlay_actor.cpp  overlay_actor.hpp
traps/toolkit/src/actors/storage2/: storage_actor.cpp  storage_actor.hpp
traps/toolkit/src/actors/tracker/: tracker_actor.cpp  tracker_actor.hpp
traps/toolkit/src/actors/wifi-provisioning/: wifi_provisioning_actor.cpp  wifi_provisioning_actor.hpp
traps/toolkit/src/hal/api/: camera_hal.hpp  classifier_hal.hpp  config_loader.cpp  config_loader.hpp  frame_buffer.hpp  h264_encoder.hpp  inference_hal.hpp  jpeg_encoder.hpp  types.hpp  video_scaler.hpp
(+17 files in other folders)
